--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -4,10 +4,10 @@
 sboclean - clean files left around by sbotools.
 .SH SYNAPSES
 .P
-sboclean [-h|-v] [-dwi]
+sboclean [-h|-v] [-dwi] [-o ALL|package]
 .SH DESCRIPTION
 .P
-sboclean is used to clean files left around by sbotools, such as downloaded source files ("distfiles"), or work directories under /tmp/SBo (or $TMP) and, for compat32 installs, under /tmp (or $TMP). Note that if not run with the -i flag, sboclean will remove anything in the distfiles or /tmp/SBo (or $TMP) folders and any /tmp/package-*-compat32 (or $TMP/package-*-compat32) directories with extreme prejudice. One of either -d or -w must be specified for this script to do anything.
+sboclean is used to clean files left around by sbotools, such as saved options (in /var/log/sbotools), downloaded source files ("distfiles"), or work directories under /tmp/SBo (or $TMP) and, for compat32 installs, under /tmp (or $TMP). Note that if not run with the -i flag, sboclean will remove anything in the distfiles or /tmp/SBo (or $TMP) folders and any /tmp/package-*-compat32 (or $TMP/package-*-compat32) directories with extreme prejudice. One of -d, -w or -o must be specified for this script to do anything.
 .SH OPTIONS
 .P
 -h|--help
@@ -28,6 +28,11 @@ Clean distfiles, by default located at /usr/sbo/distfiles.
 -w|--work
 .RS
 Clean working directories, located, by default under /tmp/SBo and, for compat32 installs, by default, /tmp.
+.RE
+.P
+-o|--options (ALL|package)
+.RS
+With ALL, clear all saved options from /var/log/sbotools. With a package name, clear the saved options for that package only.
 .RE
 .P
 -i|--interactive
