sboclean.1: Make added verbiage match the other man pages.

--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -30,9 +30,9 @@ Clean distfiles, by default located at /usr/sbo/distfiles.
 Clean working directories, located, by default under /tmp/SBo and, for compat32 installs, by default, /tmp.
 .RE
 .P
--o|--options (ALL|package)
+-o|--options (ALL|sbo_name)
 .RS
-With ALL, clear all saved options from /var/log/sbotools. With a package name, clear the saved options for that package only.
+With ALL, clean all saved options from /var/log/sbotools. With the name of a SlackBuild, clean the saved options for that SlackBuild only.
 .RE
 .P
 -i|--interactive
