sbocheck: Report out-of-tree _SBo SlackBuilds.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -7,7 +7,7 @@ sbocheck - update a local slackbuilds.org tree and check for updates.
 sbocheck [-h|-v]
 .SH DESCRIPTION
 .P
-sbocheck first updates a previously fetched copy of the slackbuilds.org tree (see sbosnap(1)) and then checks to see if any packages installed from slackbuilds.org have updates, and reports what it finds.
+sbocheck first updates a previously fetched copy of the slackbuilds.org tree (see sbosnap(1)) and then checks to see if any packages installed from slackbuilds.org have updates, and reports what it finds. Any SlackBuilds marked _SBo that are not found in the repository are reported separately.
 .SH OPTIONS
 .P
 -h|--help
