TODO: Add a missing Issue reference.

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ TO DO
 
 IN PROGRESS
 
-* Detect BUILD bumps; optionally, upgrade (RE #68)
+* Detect BUILD bumps; optionally, upgrade (RE #68, #93)
 
 DONE
 
