--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -22,6 +22,11 @@ Show help information.
 Show version information.
 .RE
 .P
+-b|--build-ignore (FALSE|TRUE)
+.RS
+If TRUE, then do not do upgrades unless the version number differs. By default, upgrades occur when the build number differs. This setting and --force are not the same; --force will initiate upgrades even if the build number is unchanged.
+.RE
+.P
 -c|--noclean (FALSE|TRUE)
 .RS
 If TRUE, then DO NOT clean working directories after building the slackbuild. These are the directories where the source is unpacked and compiled, and where the package is put together in, which are under /tmp/SBo (or $TMP). By default, these directories are removed after building an slackbuild. This option leaves those directories in place. This can be set as default via the sboconfig(1) command. Also see sbotools.conf(5). This option overrides the default.
@@ -34,7 +39,7 @@ If TRUE, then DO remove the source code after building the slackbuild. By defaul
 .P
 -f|--force
 .RS
-Force an upgrade, even if the installed version is equal to or less than the slackbuilds.org version.
+Force an upgrade, even if the installed version is equal to the slackbuilds.org version.
 .RE
 .P
 -i|--noinstall
