Switchable git branch (configurable); change rsync default URLs to gitlab.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -2,7 +2,7 @@
 .SH NAME
 .P
 sbocheck - update a local slackbuilds.org tree and check for updates.
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
 sbocheck [-h|-v]
 .SH DESCRIPTION
