--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -2,7 +2,7 @@
 .SH NAME
 .P
 sboclean - clean files left around by sbotools.
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
 sboclean [-h|-v] [-dwi] [-o ALL|package]
 .SH DESCRIPTION
