--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -2,7 +2,7 @@
 .SH NAME
 .P
 sboinstall - install slackbuilds
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
 sboinstall [-h|-v] [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-NrRip] [--create-template FILE] sbo_name (sbo_name)
 sboinstall [-h|-v] [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-NRip] --use-template FILE
