--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -2,7 +2,7 @@
 .SH NAME
 .P
 sboremove - remove packages installed from slackbuilds
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
 sboremove [-h|-v] [-a] sbo_name
 .SH DESCRIPTION
