--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -2,7 +2,7 @@
 .SH NAME
 .P
 sbosnap - slackbuilds.org tree fetch and update command.
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
 sbosnap [-h|-v] (fetch|update)
 .SH DESCRIPTION
