--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -2,9 +2,9 @@
 .SH NAME
 .P
 sboupgrade - install or upgrade slackbuilds
-.SH SYNAPSES
+.SH SYNOPSIS
 .P
-sboupgrade [-h|-v] [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-fNrRiz] --all|sbo_name (sbo_name)
+sboupgrade [-h|-v] [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-b TRUE|FALSE] [-fNrRiz] --all|sbo_name (sbo_name)
 .SH DESCRIPTION
 .P
 sboupgrade is used to upgrade packages installed from slackbuilds. If the -r flag is NOT specified, sboupgrade will pull the list of requirements from the .info file for any specified slackbuild. If such a list exists, sboupgrade will look to see whether or not those requirements are already installed, and if not, it will ask whether or not it should attempt to install them first. This is recursive, so that ordering happens correctly. sboupgrade will refuse to handle circular requirements. sboupgrade will also note groupadd and useradd commands in README files and offer to run those first. If the README documents options of the KEY=value form, sboupgrade will offer the opportunity to set options. If options were entered previously, they will be displayed and can be used again. If --all is supplied it will try to upgrade everything that sbocheck(1) reports.
