--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -23,6 +23,16 @@ NOCLEAN=(FALSE|TRUE)
 If TRUE, then DO NOT clean working directories after building the slackbuild. These are the directories where the source is unpacked and compiled, and where the package is put together in, which are under /tmp/SBo (or $TMP). By default, these directories are removed after building a slackbuild. Setting this option to TRUE causes the working directories to not be cleaned by default. This can be overridden when running sboupgrade(1)/sboinstall(1).
 .RE
 .P
+GIT_BRANCH=(FALSE|branch_name)
+.RS
+If FALSE, use the default git branch for the Slackware version, if any. If branch_name, attempt to change branches to branch_name when using sbosnap(1) or sbocheck(1) with an upstream git repository.
+.RE
+.P
+BUILD_IGNORE=(FALSE|TRUE)
+.RS
+BUILD_IGNORE: If TRUE, only do upgrades if the version number differs. By default, upgrades are done when the build number of the SlackBuild differs as well.
+.RE
+.P
 PKG_DIR=(FALSE|/path)
 .RS
 If set to a path, packages will be stored at the given location after building and installing. By default, packages are left where they are deposited by SlackBuilds, which is typically (probably always) /tmp (or $OUTPUT). If PKG_DIR is FALSE and DISTCLEAN is TRUE (either in sbotools.conf(5) or at sboupgrade/sboinstall runtime), the package will be deleted. If this option is set to a path in the filesystem, the package will be stored in that directory, regardless of any DISTCLEAN option.
