Log removed SlackBuilds, light proofreading.

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -30,7 +30,7 @@ If FALSE, use the default git branch for the Slackware version, if any. If branc
 .P
 BUILD_IGNORE=(FALSE|TRUE)
 .RS
-BUILD_IGNORE: If TRUE, only do upgrades if the version number differs. By default, upgrades are done when the build number of the SlackBuild differs as well.
+If TRUE, only do upgrades if the version number differs. By default, upgrades are done when the build number of the SlackBuild differs as well.
 .RE
 .P
 PKG_DIR=(FALSE|/path)
