--- a/TODO
+++ b/TODO
@@ -1,21 +1,20 @@
 TO DO
 
 * Punctuation and grammar fixes, especially for on-screen messaging
-* Update the zsh completions
-* Add bash completions
 * Release version 2.8 (or version 1.0 of a renamed fork)
 
 IN PROGRESS
 
-* Save build options when built from a template as well
+* Update the zsh completions
+* Add bash completions
 
 DONE
 
-* Save most recently used build options; clean with sboclean
+* Save the build options when the SlackBuild runs (all cases); clean with sboclean
 * Compatible default repo for 15.0
 * sbocheck reports out-of-tree _SBo SlackBuilds (i.e., removed ones) (RE #70)
 * Detect BUILD bumps; optionally, upgrade (RE #68, #93)
-* Configurable git branch selection (RE #22)
+* Configurable git branch selection (RE #69)
 
 NOTE
 
