--- a/SBO3-Lib/README
+++ b/SBO3-Lib/README
@@ -1,7 +1,7 @@
-SBO-Lib version 2.7
+SBO3-Lib version 2.7
 ===================
 
-SBO::Lib is a library for the sbotools scripts.
+SBO3::Lib is a library for the sbotools scripts.
 
 INSTALLATION
 
