--- a/SBO3-Lib/Changes
+++ b/SBO3-Lib/Changes
@@ -1,3 +1,14 @@
+3.0 -
+  * Change the git branch to match the Slackware version, or to a user-configured branch
+  * Change the default URLs to support Slackware 15.0 and use git repositories
+  * Use rsync default mirrors with RSYNC_DEFAULT (except for -current)
+  * Detect build number changes and optionally upgrade
+  * Detect and report out-of-tree _SBo SlackBuilds with sbocheck
+  * Save any build options when running a SlackBuild
+  * Install bash completions; zsh completions have been updated
+  * Install a default configuration file; tweak sboconfig to play somewhat nicely with it
+
+Historical Changes
 2.7 - 2019-04-28
   * Actually fix the sbofind -e bug
     (https://github.com/pink-mist/sbotools/issues/71)
