--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Pungenday, Discord 45, 3185 YOLD" "sbotools 2.7" dawnrazor.net
+.TH sbotools.conf 5 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
 .SH NAME
 .P
 sbotools.conf - configuration file for sbotools commands.
@@ -72,3 +72,6 @@ Jacob Pipkin <j@dawnrazor.net>
 Luke Williams <xocel@iquidus.org>
 .P
 Andreas Guldstrand <andreas.guldstrand@gmail.com>
+.SH MAINTAINER
+.P
+K. Eugene Carlson <kvngncrlsn@gmail.com>
