--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -1,4 +1,4 @@
-.TH sbocheck 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools 2.7" dawnrazor.net
+.TH sbocheck 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
 .SH NAME
 .P
 sbocheck - update a local slackbuilds.org tree and check for updates.
@@ -7,7 +7,7 @@ sbocheck - update a local slackbuilds.org tree and check for updates.
 sbocheck [-h|-v]
 .SH DESCRIPTION
 .P
-sbocheck first updates a previously fetched copy of the slackbuilds.org tree (see sbosnap(1)) and then checks to see if any packages installed from slackbuilds.org have updates, and reports what it finds. SlackBuilds with differing build numbers are reported separately, as are any SlackBuilds marked _SBo that are not found in the repository.
+sbocheck first updates a previously-fetched copy of the slackbuilds.org tree (see sbosnap(1)) and then checks to see if any packages installed from slackbuilds.org have updates, and reports what it finds. SlackBuilds with differing build numbers are reported separately, as are any SlackBuilds marked _SBo that are not found in the repository.
 .SH OPTIONS
 .P
 -h|--help
@@ -21,7 +21,7 @@ Show version information.
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pink-mist/sbotools/issues ; patches are always welcome.
+None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
 .SH SEE ALSO
 .P
 sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
@@ -32,3 +32,6 @@ Jacob Pipkin <j@dawnrazor.net>
 Luke Williams <xocel@iquidus.org>
 .P
 Andreas Guldstrand <andreas.guldstrand@gmail.com>
+.SH MAINTAINER
+.P
+K. Eugene Carlson <kvngncrlsn@gmail.com>
