--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -1,4 +1,4 @@
-.TH sbofind 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools 2.7" dawnrazor.net
+.TH sbofind 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
 .SH NAME
 .P
 sbofind - search slackbuilds.org tree for a given name
@@ -59,7 +59,7 @@ sbofind can exit with the following exit codes:
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pink-mist/sbotools/issues ; patches are always welcome.
+None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
@@ -70,3 +70,6 @@ Jacob Pipkin <j@dawnrazor.net>
 Luke Williams <xocel@iquidus.org>
 .P
 Andreas Guldstrand <andreas.guldstrand@gmail.com>
+.SH MAINTAINER
+.P
+K. Eugene Carlson <kvngncrlsn@gmail.com>
