--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -1,4 +1,4 @@
-.TH sboupgrade 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools 2.7" dawnrazor.net
+.TH sboupgrade 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
 .SH NAME
 .P
 sboupgrade - install or upgrade slackbuilds
@@ -105,7 +105,7 @@ sboupgrade can exit with the following exit codes:
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pink-mist/sbotools/issues ; patches are always welcome.
+None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sbotools.conf(5)
@@ -116,3 +116,6 @@ Jacob Pipkin <j@dawnrazor.net>
 Luke Williams <xocel@iquidus.org>
 .P
 Andreas Guldstrand <andreas.guldstrand@gmail.com>
+.SH MAINTAINER
+.P
+K. Eugene Carlson <kvngncrlsn@gmail.com>
