Starting on the man pages.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -1,4 +1,4 @@
-.TH sbocheck 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
+.TH sbocheck 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
 sbocheck - update a local slackbuilds.org tree and check for updates.
