--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -1,4 +1,4 @@
-.TH sboclean 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
+.TH sboclean 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
 sboclean - clean files left around by sbotools.
