--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -1,4 +1,4 @@
-.TH sbosnap 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
+.TH sbosnap 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
 sbosnap - slackbuilds.org tree fetch and update command.
@@ -7,7 +7,7 @@ sbosnap - slackbuilds.org tree fetch and update command.
 sbosnap [-h|-v] (fetch|update)
 .SH DESCRIPTION
 .P
-sbosnap is used to download and update a local copy of the slackbuilds.org tree, minus the .tar.gz{,.asc} files. Note that sbocheck(1) will also update the tree, and will then also check for updated slackbuilds. rsync is used for both operations.
+sbosnap is used to download and update a local copy of the slackbuilds.org tree, minus the .tar.gz{,.asc} files. Note that sbocheck(1) will also update the tree, and will then also check for updated SlackBuilds. rsync is used for both operations.
 .SH OPTIONS
 .P
 -h|--help
