--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -1,16 +1,64 @@
-.TH sboinstall 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0"
+.TH sboinstall 1 "Pungenday, Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
-sboinstall - install slackbuilds
+.B
+sboinstall
+- install SlackBuilds
 .SH SYNOPSIS
 .P
-sboinstall [-h|-v] [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-NrRip] [--create-template FILE] sbo_name (sbo_name)
-sboinstall [-h|-v] [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-NRip] --use-template FILE
+sboinstall [-h|-v]
+.P
+sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-rRip] [--create-template FILE] sbo_name (sbo_name)
+.P
+sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-i] --use-template FILE
 .SH DESCRIPTION
 .P
-sboinstall is used to install SBos. If the -r flag is NOT specified, sboinstall will pull the list of requirements from the .info file for any specified slackbuild. If such a list exists, sboinstall will look to see whether or not those requirements are already installed, and if not, it will ask whether or not it should attempt to install them first. This is recursive, so that ordering happens correctly. sboinstall will refuse to handle circular requirements. sboinstall will attempt to note groupadd and useradd commands in README files and offer to run those first. If the README appears to document options of the KEY=value form, sboinstall will offer the opportunity to set options. Any build options, whether passed here or in a template, will be saved to /var/log/sbotools when the SlackBuild runs.
+.B
+sboinstall
+is used to install SlackBuilds. If the
+.B
+-r
+flag is not specified,
+.B
+sboinstall
+will pull the list of requirements from the .info
+file for any specified SlackBuild. This is a recursive
+operation over all dependencies.
+.B
+sboinstall
+will offer to install any non-installed dependencies in
+the build queue. This program will not handle circular
+dependencies.
 .P
-sboinstall will attempt to download the sources from the DOWNLOAD or DOWNLOAD_x86_64 variables in the .info file. If such a download fails or the file can't be verified, it'll attempt to download the file from ftp://slackware.uk/sbosrcarch/ instead.
+README files are parsed for
+.B
+groupadd
+and
+.B
+useradd
+commands, and
+.B
+sboinstall
+will offer to run them prior to building. If the README
+is judged to document options in
+.I
+KEY=VALUE
+form, a prompt for setting options will appear. Any
+build options, whether passed interactively or in a
+template, will be saved to
+.I
+/var/log/sbotools
+when the SlackBuild runs.
+.P
+.B
+sboinstall
+will attempt to download the sources from the DOWNLOAD
+or DOWNLOAD_x86_64 variables in the .info file. If
+either the download or the md5sum check fails, a new
+download will be attempted from
+.I
+ftp://slackware.uk/sbosrcarch/
+as a fallback measure.
 .SH OPTIONS
 .P
 -h|--help
@@ -25,56 +73,139 @@ Show version information.
 .P
 -c|--noclean (FALSE|TRUE)
 .RS
-If TRUE, then DO NOT clean working directories after building the slackbuild. These are the directories where the source is unpacked and compiled, and where the package is put together in, which are under /tmp/SBo (or $TMP). By default, these directories are removed after building an slackbuild. This option leaves those directories in place. This can be set as default via the sboconfig(1) command. Also see sbotools.conf(5). This option overrides the default.
+If TRUE, do not clean working directories after building.
+These are the build and
+.I
+package-(sbo)
+directories under
+.I
+/tmp/SBo
+(or $TMP). Cleaning these directories can be set as default
+via the
+.B
+sboconfig(1)
+command. See also
+.B
+sbotools.conf(5)\fR\
+\&. This option overrides the default.
 .RE
 .P
 -d|--distclean (FALSE|TRUE)
 .RS
-If TRUE, then DO remove the source code after building the slackbuild. By default, the source code is not removed, and lives under $SBO_HOME/distfiles, which, by default, is /usr/sbo/distfiles; this option can be set as default via the sboconfig(1) command. See also sbotools.conf(5). This option overrides the default.
+If TRUE, then remove the source code after building. The
+source code is retained in
+.I
+SBO_HOME/distfiles
+by default. This option can be set as default via the
+.B
+sboconfig(1)
+command. See also
+.B
+sbotools.conf(5)\fR\
+\&. This option overrides the default.
 .RE
 .P
 -i|--noinstall
 .RS
-Do not actually install the package created at the end of the build process. So, the slackbuild will be run, and the package will be left in /tmp (or $OUTPUT), or in $PKG_DIR if so defined (see sboconfig(1) and sbotools.conf(5)).
+Do not install the package at the end of the build process.
+It will be left in
+.I
+/tmp
+(or $OUTPUT), or in
+.B
+PKG_DIR
+if so defined. See
+.B
+sboconfig(1)
+and
+.B
+sbotools.conf(5)\fR\
+\&.
 .RE
 .P
 -j|--jobs (FALSE|#)
 .RS
-If numeric (2,5,10, etc), then that number will be fed to the "-j" argument to make when a slackbuild which invokes "make" is run. This only makes sense on multicore systems, where one might set the JOBS to the number of available cores, or half that number, etc.
+If a digit, pass to the
+.B
+-j
+argument when a SlackBuild invoking
+.B
+make
+is run.
 .RE
 .P
 -p|--compat32
 .RS
-Create a -compat32 package instead of a normal x86_64 package on multilib x86_64 systems. This requires /usr/sbin/convertpkg-compat32; this can at least be obtained from AlienBob's compat32-tools package - see http://alien.slackbook.org/blog/. Note that this may or may not be foolproof, and is not supported by anyone; not me, not AlienBob, not Slackware, etc. I recommend using this with the -i option so that the created package can be inspected prior to installation. If you find that a particular slackbuild needs additional help to be created as -compat32 package, contact me at j@dawnrazor.net.
+Create a -compat32 package on multilib x86_64 systems.
+This requires the
+.B
+compat32-tools
+package by Eric Hameleers. Please note that this operation
+is not necessarily foolproof, and is unsupported by anyone
+in principle. As a best practice,
+.B
+--compat32
+should be combined with
+.B
+--noinstall
+so that the contents of the package can be inspected prior
+to installation. Ensure that the running shell has already
+sourced
+.I
+/etc/profile.d/32dev.{c,}sh
+before running, and that the
+.B
+DISTCLEAN
+option is set to
+.B
+FALSE.
+GitHub Issues are welcome in case of unexpected failure.
+-compat32 packages are currently
+.B
+incompatible
+with templates.
 .RE
 .P
 -r|--nointeractive
 .RS
-Skip viewing of the README and the yes or no question which accompanies it. Anytime sboinstall is run, the first thing the command will attempt to do is show you the README for a given slackbuild and ask whether or not you wish to proceed; this option skips the README and bypasses the question. This also disables dependency resolution, since you have no way of confirming which dependencies you actually want to install. If multiple slackbuilds are specified, this option bypasses them all.
+Bypass all user prompts and all dependency resolution for
+the requested SlackBuilds. This option should not be used
+unless it is obvious that dependency resolution and build
+options are not required.
 .RE
 .P
 -R|--norequirements
 .RS
-This option causes sboinstall to skip requirement handling, but still show the README and prompt the user to proceed.
+Bypass dependency resolution, but still show README and the
+user prompts before proceeding with the build.
 .RE
 .P
 --reinstall
 .RS
-This option asks if we should reinstall anything among the requirements that is already installed.
+Offer to reinstall all packages in the build queue.
 .RE
 .P
 --create-template (FILE)
 .RS
-Create a template for the SlackBuilds including any optional commands or build options that you wish to set and store this in the specified FILE.
+Create a template for one or more SlackBuilds including any
+pre-build commands and build options and save to the specified
+.B
+FILE\fR\
+\&.
 .RE
 .P
 --use-template (FILE)
 .RS
-Use a template file and let it specify all the build options and optional commands to be used. This also enables the --nointeractive flag.
+Build using the template saved to
+.B
+FILE.
+This disables all user prompts.
 .RE
 .SH EXIT CODES
 .P
-sboinstall can exit with the following exit codes:
+.B
+sboinstall
+can exit with the following exit codes:
 .RS
 
 0: all operations were succesful.
@@ -83,35 +214,44 @@ sboinstall can exit with the following exit codes:
 1: a usage error occured, such as specifying invalid options.
 .RE
 .RS
-3: a .SlackBuild exited non-zero.
+3: a SlackBuild exited non-zero.
 .RE
 .RS
-4: unable to md5sum verify an SBo's source file(s).
+4: unable to md5sum verify the source file(s).
 .RE
 .RS
-5: unable to download an SBo's source file(s).
+5: unable to download the source file(s).
 .RE
 .RS
 6: unable to obtain a required file handle.
 .RE
 .RS
-7: unable to get required info from the SBo's .info file.
+7: unable to get required info from the .info file.
 .RE
 .RS
 8: unable to unset the exec-on-close bit on a temporary file.
 .RE
 .RS
-9: multilib hasn't been setup (where required).
+9: multilib has not been set up (where required).
 .RE
 .RS
-10: convertpkg-compat32 exited non-zero.
+10:
+.B
+convertpkg-compat32
+exited non-zero.
 .RE
 .RS
-11: the convertpkg-compat32 script can't be found (where required).
+11: the
+.B
+convertpkg-compat32
+script cannot be found (where required).
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
+None known. If found, Issues and Pull Requests to
+.I
+https://github.com/pghvlaans/sbotools3/
+are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
