--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -8,7 +8,7 @@ sboinstall
 .P
 sboinstall [-h|-v]
 .P
-sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-rRip] [--create-template FILE] sbo_name (sbo_name)
+sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-ipRr] [--create-template FILE] sbo_name (sbo_name)
 .P
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-i] --use-template FILE
 .SH DESCRIPTION
@@ -125,7 +125,7 @@ sbotools.conf(5)\fR\
 .P
 -j|--jobs (FALSE|#)
 .RS
-If a digit, pass to the
+If numerical, pass to the
 .B
 -j
 argument when a SlackBuild invoking
@@ -205,7 +205,7 @@ This disables all user prompts.
 .P
 .B
 sboinstall
-can exit with the following exit codes:
+can exit with the following codes:
 .RS
 
 0: all operations were succesful.
